[gd_scene load_steps=4 format=3 uid="uid://3tuptxboia4m"]

[ext_resource type="Theme" uid="uid://ousk4dq8dmjl" path="res://default_theme.tres" id="1_nxqld"]
[ext_resource type="Script" path="res://scenes/projects_manager/projects_manager.gd" id="2_l2ije"]

[sub_resource type="LabelSettings" id="LabelSettings_mdxc3"]
font_size = 60

[node name="projects_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nxqld")
script = ExtResource("2_l2ije")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Project manager"
label_settings = SubResource("LabelSettings_mdxc3")
horizontal_alignment = 1

[node name="HBox1" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="FilterProjectsLineEdit" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/HBox1"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter Projects"
clear_button_enabled = true

[node name="SortLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBox1"]
layout_mode = 2
text = "Sort:"

[node name="OptionButton" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/HBox1"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Laste Edited"
popup/item_0/id = 0
popup/item_1/text = "Name"
popup/item_1/id = 1
popup/item_2/text = "Path"
popup/item_2/id = 2

[node name="HBox2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="ProjectsPanel" type="Panel" parent="Panel/MarginContainer/VBoxContainer/HBox2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/HBox2/ProjectsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProjectsList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBox2/ProjectsPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonsPanel" type="Panel" parent="Panel/MarginContainer/VBoxContainer/HBox2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBox2/ButtonsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="NewProjectButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBox2/ButtonsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "New project"

[node name="ImportProjectButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBox2/ButtonsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Import project"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/HBox2/ButtonsPanel/VBoxContainer"]
layout_mode = 2

[node name="RemoveButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBox2/ButtonsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Remove"

[connection signal="text_changed" from="Panel/MarginContainer/VBoxContainer/HBox1/FilterProjectsLineEdit" to="." method="_on_filter_projects_line_edit_text_changed"]
[connection signal="item_selected" from="Panel/MarginContainer/VBoxContainer/HBox1/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBox2/ButtonsPanel/VBoxContainer/NewProjectButton" to="." method="_on_new_project_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBox2/ButtonsPanel/VBoxContainer/ImportProjectButton" to="." method="_on_import_project_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBox2/ButtonsPanel/VBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
